# jamye-plz

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  flake.nix
.agents/: oma-config.yaml
.claude/: settings.json
.codex/: config.toml
.serena/: project.yml
backend/: .env.example  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0885dfeb8656_add_message_topic_id.py  0a5d7bbeb961_initial_schema.py  a1b2c3d4e5f6_add_chatroom_reads_and_notification_dedup.py  c3d4e5f6a7b8_add_group_deleted_at.py
backend/app/: cli.py  main.py
backend/app/core/: config.py  deps.py  exceptions.py  push_endpoint.py  security.py  storage.py  timeutil.py  ws_hub.py
backend/app/db/: session.py
backend/app/models/: __init__.py  chatroom.py  chatroom_read.py  group.py  invite.py  membership.py  message.py  notification.py  push_subscription.py  topic.py  topic_media.py  topic_tag.py  user.py
backend/app/repositories/: chatroom_read_repository.py  group_repository.py  invite_repository.py  message_repository.py  notification_repository.py  topic_repository.py  user_repository.py
backend/app/routers/: __init__.py  auth.py  chatrooms.py  groups.py  invites.py  me.py  media.py  notifications.py  push.py  tags.py  topics.py
backend/app/schemas/: __init__.py  chat.py  group.py  invite.py  topic.py  user.py
backend/app/services/: auth_service.py  chat_service.py  group_service.py  invite_service.py  notification_service.py  push_dispatch.py  topic_service.py
backend/tests/: test_chat_service.py  test_group_management.py  test_push.py  test_storage.py  test_timeutil.py  test_ws_hub.py
docs/: README.md
frontend/: .prettierignore  AGENTS.md  CLAUDE.md  eslint-suppressions.json  package-lock.json  package.json  svelte.config.js  (+1 more)
(+83 files in other folders)
