[project]
name = "jamye-plz-backend"
version = "0.1.0"
description = "jamye-plz backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.0",
    "boto3>=1.35.0",
    "pywebpush>=2.0.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "anyio>=4.7.0",
    "factory-boy>=3.3.0",
    "poethepoet>=0.30.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"

# Developer tasks — run with `uv run poe <task>` (package.json-scripts style).
[tool.poe.tasks]
dev = "uvicorn app.main:app --reload --port 8000"
start = "uvicorn app.main:app --port 8000"
migrate = "alembic upgrade head"
# Baseline an existing pre-Alembic DB (schema created by the old create_all but
# missing alembic_version): run `poe stamp` ONCE to mark it at head, then use
# `poe migrate` for subsequent upgrades. Fresh/empty DBs just use `poe migrate`.
stamp = "alembic stamp head"
makemigration = "alembic revision --autogenerate"
test = "pytest"
lint = "ruff check ."
format = "ruff format ."
